force-app/main/default/objects/LeadEntry__c/LeadEntry__c.object-meta.xml
<CustomObject>
    <label>Entrada de Lead</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entradas de Lead</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>