force-app/main/default/objects/LeadEntry__c/fields/DuplicatedDate__c.field-meta.xml
<CustomField>
    <fullName>DuplicatedDate__c</fullName>
    <label>DuplicatedDate</label>
    <type>DateTime</type>
</CustomField>