force-app/main/default/objects/LeadEntry__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Entradas de Lead</relationshipLabel>
    <relationshipName>EntradasLead</relationshipName>
    <type>Lookup</type>
</CustomField>