force-app/main/default/objects/LeadEntry__c/fields/PartnerAccount__c.field-meta.xml
<CustomField>
    <fullName>PartnerAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Entradas de Lead</relationshipLabel>
    <relationshipName>EntradasLead</relationshipName>
    <type>Lookup</type>
</CustomField>