force-app/main/default/objects/LeadEntry__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Telefone</label>
    <type>Phone</type>
</CustomField>