force-app/main/default/objects/LeadEntry__c/listViews/Meus_leads.listView-meta.xml
<ListView>
    <fullName>Meus_leads</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Meus leads</label>
</ListView>